# oop_lab_2

lab2/: CMakeLists.txt  README.md
lab2/include/: five.h
lab2/src/: five.cpp  main.cpp
lab2/tests/: tests.cpp
